--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -26,7 +26,7 @@ import Layout from '../layouts/Layout.astro';
         </p>
       </div>
 
-      <form name="contacto" method="POST" data-netlify="true" action="/gracias.html/" class="contact-form">
+      <form name="contacto" method="POST" data-netlify="true" action="/gracias.astro" class="contact-form">
         
         <input type="hidden" name="form-name" value="contacto" />
         
